--- a/ac_app/templates/space/star_detail.html
+++ b/ac_app/templates/space/star_detail.html
@@ -54,5 +54,6 @@
             </div>
         </div>
     </main>
+    <body data-page="star_detail">
     <script type="module" src="{% static 'js/ajaxFormManager.js' %}"></script>
 {% endblock %}
