--- a/ac_app/templates/cart/cart_detail.html
+++ b/ac_app/templates/cart/cart_detail.html
@@ -72,5 +72,5 @@
             </div>
         </div>
     </main>
-    <script type="module" src="{% static 'js/ajaxFormManager.js' %}"></script>
+    <script type="module" src="{% static 'js/cart_ajax.js' %}"></script>
 {% endblock %}
