--- a/ac_app/templates/account/profile.html
+++ b/ac_app/templates/account/profile.html
@@ -41,8 +41,8 @@
                         <li><a class="page-link" href="{% url 'edit_profile' %}">Edit Profile</a></li>
                         <li><a class="page-link" href="{% url 'user_comments' %}">Comments</a></li>
                         <li><a class="page-link" href="{% url 'user_favorites' %}">Favorite Stars</a></li>
-                        <li><a class="page-link" href="{% url 'user_wish_list' %}">Show Wish List</a></li>
-                        <li><a class="page-link" href="#">View Orders</a></li>
+                        <li><a class="page-link" href="{% url 'user_wish_list' %}">Wish List</a></li>
+                        <li><a class="page-link" href="#">Orders</a></li>
                     </ul>
                 </div>
                 <hr>
