--- a/ac_app/templates/include/pagination/items_pagination.html
+++ b/ac_app/templates/include/pagination/items_pagination.html
@@ -3,7 +3,7 @@
 <ul class="pagination-list">
     {% if page_obj.has_previous %}
         <li class="pagin-arrows">
-            <a class="page-link" href="?page={{ page_obj.previous_page_number }}
+            <a class="page-link" href="?query={{ query }}&page={{ page_obj.previous_page_number }}
                 {% if request.GET.sort %}&sort={{ request.GET.sort }}{% endif %}">
                 <img class="page-arrows" src="{% static 'images/arrow_left.svg' %}" alt="img">
             </a>
@@ -15,7 +15,7 @@
             <li class="active">{{ num }}</li>
         {% elif num >= page_obj.number|add:'-2' and num <= page_obj.number|add:'2' %}
             <li>
-                <a class="page-link" href="?page={{ num }}
+                <a class="page-link" href="?query={{ query }}&page={{ num }}
                     {% if request.GET.sort %}&sort={{ request.GET.sort }}{% endif %}">
                     {{ num }}
                 </a>
@@ -25,7 +25,7 @@
 
     {% if page_obj.has_next %}
         <li class="pagin-arrows">
-            <a class="page-link" href="?page={{ page_obj.next_page_number }}
+            <a class="page-link" href="?query={{ query }}&page={{ page_obj.next_page_number }}
                 {% if request.GET.sort %}&sort={{ request.GET.sort }}{% endif %}">
                 <img class="page-arrows" src="{% static 'images/arrow_right.svg' %}" alt="img">
             </a>
