Refactor account (login, UserWishListView)

--- a/ac_app/templates/base.html
+++ b/ac_app/templates/base.html
@@ -21,6 +21,7 @@
 </head>
 <body>
     <div id="notification-modal" class="modal-message"><p id="modal-message"></p></div>
+    <div class="modal-background" id="modal-background"></div>
     {% include 'include/header.html' %}
     {% block content %}
     {% endblock %}
