--- a/ac_app/static/css/base.css
+++ b/ac_app/static/css/base.css
@@ -110,13 +110,25 @@ main { min-height: calc(100vh - 150px); }
     position: fixed;
     z-index: 100;
     left: 50%;
-    top: 5%;
+    top: 50%;
     transform: translate(-50%, -50%);
     padding: 20px;
     border-radius: 30px;
     font-family: 'Merriweather', serif;
     background-color: var(--bg-table);
-  }
+}
+.modal-background {
+    display: none;
+    position: fixed;
+    z-index: 99;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(0 0 0 / 70%);
+}
+.modal-message-open,
+.modal-background-open { display: block; }
 
 .messages {
     margin-bottom: 10px;
