--- a/ac_app/templates/registration/login.html
+++ b/ac_app/templates/registration/login.html
@@ -15,8 +15,8 @@
         <div class="login-form">
             <form method="post">
                 {% csrf_token %}
-                <div class="form-error">{{ login_form.non_field_errors }}</div>
-                {% for i in login_form %}
+                <div class="form-error">{{ form.non_field_errors }}</div>
+                {% for i in form %}
                     <input class="form-item" placeholder="{{ i.label }}"
                            type="{{ i.field.widget.input_type }}" name="{{ i.name }}"
                            value="{{ i.value|default_if_none:'' }}">
